--- a/pv03/index.html
+++ b/pv03/index.html
@@ -97,7 +97,7 @@ text-align: center;
 </style>
 <div class="headline-1660141877348JxPPzg-element headline">
 <h1>
-Hoje, <span class="lg"> 23 de janeiro de 2023,</span>  é o último dia para ver esse vídeo!
+Hoje, <span class="lg"> 26 de janeiro de 2023,</span>  é o último dia para ver esse vídeo!
 </h1>
 </div>
 </div>
@@ -151,7 +151,7 @@ text-align: center;
 }
 </style>
 <div class="headline-1658581343654lMpslJ-element headline">
-<h1> <span style="color:#fc92eb"><b>MÉTODO IRLANDÊS AMENIZA A CELULITE EM MENOS DE 4 SEMANAS!</b></span>
+<h1> <span style="color:#fc92eb"><b>ESSE TRUQUE INDIANO AMENIZA A CELULITE EM MENOS DE 4 SEMANAS!</b></span>
 </div>
 </div>
 
