--- a/pv03/index.html
+++ b/pv03/index.html
@@ -151,7 +151,7 @@ text-align: center;
 }
 </style>
 <div class="headline-1658581343654lMpslJ-element headline">
-<h1> <span style="color:#fc92eb"><b>ESSE TRUQUE INDIANO AMENIZA A CELULITE EM MENOS DE 4 SEMANAS!</b></span>
+<h1> <span style="color:#fc92eb"><b>ERVA INDIANA AMENIZA A CELULITE EM MENOS DE 4 SEMANAS!</b></span>
 </div>
 </div>
 
