--- a/ps03/index.html
+++ b/ps03/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
-  <title>O Fim do Colesterol</title>
+  <title>Notícias do Mês</title>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11034423248"></script>
@@ -19,6 +19,23 @@
   
 </script>
 
+<!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '3291293887754827');
+  fbq('track', 'AddToCart');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=3291293887754827&ev=AddToCart&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
   
 </head>
 <body> 
@@ -35,9 +52,9 @@
         </div>
       </div>    
     </div>
-    <p style="text-align: center; font-weight: bold;"><font color="white" >Copyright 2023 – GAD © Todos os Direitos Reservados</font></p>
+    <p style="text-align: center; font-weight: bold;"><font color="white" >Copyright 2023 – GAC © Todos os Direitos Reservados</font></p>
   </div>
-   <div class="text-white"><a href="termos.html" class="text-white">Termos de Uso |</a><a href="privacidade.html" class="text-white"> Política de Privacidade</a></div>
+   <div class="text-white"><a href="termos.html" class="text-white"><font color="black" >Termos de Uso |</font></a><a href="privacidade.html" class="text-white"><font color="black" > Política de Privacidade</font></a></div>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
