--- a/pv03/index.html
+++ b/pv03/index.html
@@ -39,6 +39,25 @@
   gtag('config', 'G-712C9X8FMY');
 </script>
 <!-- End Google Tag Manager (noscript) -->
+
+<!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '3291293887754827');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=3291293887754827&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
 </head>
 <body>
 <style>
@@ -97,7 +116,7 @@ text-align: center;
 </style>
 <div class="headline-1660141877348JxPPzg-element headline">
 <h1>
-Hoje, <span class="lg"> 26 de janeiro de 2023,</span>  é o último dia para ver esse vídeo!
+Hoje, <span class="lg"> 30 de janeiro de 2023,</span>  é o último dia para ver esse vídeo!
 </h1>
 </div>
 </div>
@@ -208,7 +227,7 @@ color: #0d0d0d;
 }
 </style>
 <footer class="footer-pBmpic3094525-element">
-<p>Copyright 2023 – GEC ® Todos os Direitos Reservados</p>
+<p>Copyright 2023 – GAC ® Todos os Direitos Reservados</p>
 <div style="display:flex;align-items:center;justify-content:center;margin-top:24px;">
 <a id="t" style="margin-right:12px" href="https://ofimdocolesterol.site/termos/" target="_blank">
 Termos de Uso
