--- a/atp03/index.html
+++ b/atp03/index.html
@@ -48,7 +48,7 @@
          <p><font color="black" >Mas existe um método natural para tratar os furinhos que ainda é desconhecido por 86% das mulheres. Assista ao curto vídeo abaixo.</font></p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://noticiasdomes.online/pv03">ASSISTIR...</a>
+          <a class="btn" href="https://noticiasdomes.online/atv03/">ASSISTIR...</a>
         </div>
       </div>    
     </div>
