--- a/blog1/index.html
+++ b/blog1/index.html
@@ -169,7 +169,7 @@ body {
            
 
             <!-- Termos de Uso e Política de Privacidade -->
-            <div class="text-white"><a href="termos.html" class="text-white"><font color="white" >Terminos de uso |</font></a><a href="privacidade.html" class="text-white"><font color="white" >  Políticas de privacidad</font></a></div>
+            <div class="text-white"><a href="termos.html" class="text-white"><font color="white" >Terminos de uso |</font></a><a href="noticiasdomes.online/privacidade/" class="text-white"><font color="white" >  Políticas de privacidad</font></a></div>
           </div>
         </div>
       </div>
